--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 </head>
 <body>
     <!-- The rest of the HTML is exactly the same -->
-    <h1>Stock News Scraper</h1>
+    <h1>Stock News Scraper - SG 2025</h1>
     <div class="controls">
         <input type="text" id="tickerInput" placeholder="Enter ticker or leave empty">
         <button id="fetchBtn">Get News</button>
